testsuite/tests/ghc-regress/parser/should_fail/read037.hs

module Foo where

class Foo a b

